# ditherust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  point3d.rs  theme.rs
themes/: gruvbox.json  nord.json  solarized.json  tokyonight.json
