[package]
name = "ditherust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
color-eyre = "0.6"
image = "0.24.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
